Fixes missing space in filters line

--- a/src/styles/components/deputies-list/_filters.scss
+++ b/src/styles/components/deputies-list/_filters.scss
@@ -7,7 +7,7 @@
     margin-bottom: 10px;
     &--advanced {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
     }
   }
 
@@ -189,7 +189,7 @@
     }
   }
   &__search {
-    width: 25%;
+    width: 33%;
     display: flex;
     align-items: center;
     .search {
@@ -217,6 +217,7 @@
     }
   }
   &__sexes {
+    width: 33%;
     margin: 10px 0;
     display: flex;
     justify-content: space-around;
@@ -356,9 +357,9 @@
     background: grey;
   }
   &__reset {
-    width: 100%;
+    width: 33%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     button {
       background-color: rgba(black, 0.05);
       border: solid 2px rgba(black, 0);
